# linux-lwip-mbedtls

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cl  xx
arch/: cc.h  lwipopts.h  sys_arch.c  sys_arch.h
lwip/: CMakeLists.txt.new  tmp.patch
lwip/src/include/: arch
mbedtls/configs/: config-ccm-psk-dtls1_2.h  config-ccm-psk-tls1_2.h  config-suite-b.h  config-thread.h  crypto-config-suite-b.h  crypto-config-symmetric-only.h
mbedtls/include/mbedtls/: mbedtls_config.h
patches/: lwip-0001-cmakelists.patch  mbedtls-1001-disable-platform-network-api.patch  patch.sh
test/: CMakeLists.txt  certs.h  echo_server.c  lwip.h  main.c  mbedtls_config.h  mbedtls_net_sockets.c  netif.c  pcap.c  socket_echo_server.c  ssl_server.c  xx-lwip  xx-tls
